# EZ-Claw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
OneDrive/Documents/Smart ERP/EZ-Claw/: CURRENT_STATE.md  Dockerfile.dev  README.md  index.html  package.json  tsconfig.json
OneDrive/Documents/Smart ERP/EZ-Claw/crates/ezclaw-core/: Cargo.toml
OneDrive/Documents/Smart ERP/EZ-Claw/scripts/: build-wasm.sh
OneDrive/Documents/Smart ERP/EZ-Claw/src/: App.svelte  main.ts  vite-env.d.ts
assets/: App-CpoXfH98.js  App-DZ15uZKF.css  ezclaw_core-BDbdbuxI.js  index-BkEexPGR.js  index-DpisMVSz.css  sql-wasm-browser-Wh5-jBH4.js
containers/: Dockerfile.alpine  Dockerfile.c2w  run-c2w.sh
crates/ezclaw-core/: Cargo.toml
crates/ezclaw-core/src/: agent.rs  config.rs  planning.rs  providers.rs  tools.rs  workspace.rs
crates/ezclaw-core/src/channels/: router.rs  types.rs
crates/ezclaw-core/src/security/: allowlist.rs  leak_detection.rs  mod.rs  permissions.rs  sandbox.rs
docs/: ARCHITECTURE.md
scripts/: build-wasi-containers.sh  dev.sh
src/: App.svelte  app.css  vite-env.d.ts
src/bridge/: agent-api.ts  channel-manager.ts  memory-bridge.ts  provider-bridge.ts  providers.ts  sandbox-manager.ts  tool-runtime.ts  wasi-container.ts  wasm-loader.ts
src/components/: Chat.svelte  Header.svelte  MCPPanel.svelte  OnboardingModal.svelte  PersonaManager.svelte  Settings.svelte  SkillsPanel.svelte  WorkspacePanel.svelte
(+36 files in other folders)
