[package]
name = "ezclaw-core"
version = "0.1.0"
edition = "2021"
description = "EZ-Claw WASM core — browser port of ZeroClaw's engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
console_error_panic_hook = "0.1"
  uuid = { version = "1", features = ["v4", "js"] }
  chacha20poly1305 = "0.5"
  sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = false
codegen-units = 1
strip = true
